--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,8 @@
   <properties>
     <maven.compiler.source>17</maven.compiler.source>
     <maven.compiler.target>8</maven.compiler.target>
+    <sonar.organization>shivu1993</sonar.organization>
+    <sonar.host.url>https://sonarcloud.io</sonar.host.url>
   </properties>
   <name>LamdaProjectDemo Maven Webapp</name>
   <url>http://maven.apache.org</url>
